update showtime and booking api
